ajustes no tamanho da fonte do titulo do header e ajuste no icone github do footer

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             <div class="bg-transparent ml-2 py-3">
                 <div class="d-flex flex-column text-center bg-transparent">
-            <a href="https://github.com/guibarross" target="_blank"><img class="icons-footer" class="bg-transparent" src="./assets/github.svg" alt=""></i></a>
+            <a href="https://github.com/guibarross" target="_blank"><img class="icons-footer bg-transparent" src="./assets/github.svg" alt=""></i></a>
                 <small class="bg-transparent">GitHub</small>
             </div>
             </div>
